refactor: update headings of post-project

--- a/pages/good-practices/post-project.mdx
+++ b/pages/good-practices/post-project.mdx
@@ -3,7 +3,7 @@ import Callout from 'nextra-theme-docs/callout'
 # Boas práticas após finalizar um projeto
 `github` `sonarcloud`
 
-## Construir um bom Readme
+### Construir um bom Readme
 
 1. Adicionar um título descritivo e [badges](https://shields.io/)
 2. Adicionar descrição do projeto
@@ -18,7 +18,7 @@ import Callout from 'nextra-theme-docs/callout'
 </Callout>
 
 
-### Modelo de projeto com bom readme
+#### Modelo de projeto com bom readme
 
 - [Projeto Trybe Futebol Clube](https://github.com/thomasravache/project-trybe-futebol-clube-trybe/blob/main/README.md)
 
