refactor: update headings of post-project

--- a/pages/good-practices/post-project.mdx
+++ b/pages/good-practices/post-project.mdx
@@ -3,7 +3,7 @@ import Callout from 'nextra-theme-docs/callout'
 # Boas práticas após finalizar um projeto
 `github` `sonarcloud`
 
-### Construir um bom Readme
+## Construir um bom Readme
 
 1. Adicionar um título descritivo e [badges](https://shields.io/)
 2. Adicionar descrição do projeto
@@ -22,7 +22,7 @@ import Callout from 'nextra-theme-docs/callout'
 
 - [Projeto Trybe Futebol Clube](https://github.com/thomasravache/project-trybe-futebol-clube-trybe/blob/main/README.md)
 
-### Exemplo de How to Start
+#### Exemplo de How to Start
 
 >To develop locally, clone this repository and run the following command to start the local dev server:
 >
