refactor: give credits to Thallyta Castro

--- a/pages/good-practices/post-project.mdx
+++ b/pages/good-practices/post-project.mdx
@@ -39,4 +39,4 @@ O [sonarcloud](https://sonarcloud.io/) avalia a qualidade de código e cobertura
 
 ## Créditos
 
-[Como ter um bom Readme - Thallyta Castro](https://drive.google.com/file/d/1oxctngSjk5PlzLKB7L-LtX6pd-bUtKUs/view?usp=sharing)
+[Como ter um bom Readme - Thallyta Castro](https://www.linkedin.com/posts/thallyta-castro_como-escrever-o-readme-activity-6904060018539204608-nWM6?utm_source=linkedin_share&utm_medium=member_desktop_web)
