feat: add new tag to post-project

--- a/pages/good-practices/post-project.mdx
+++ b/pages/good-practices/post-project.mdx
@@ -1,7 +1,7 @@
 import Callout from 'nextra-theme-docs/callout'
 
 # Boas práticas após finalizar um projeto
-`github` `sonarcloud`
+`github` `sonarcloud` `readme`
 
 ## Construir um bom Readme
 
